Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-31618

Server crashes in process_i_s_table_temporary_tables/get_all_tables

    XMLWordPrintable

Details

    Description

      CREATE TEMPORARY SEQUENCE seq1 ;
       --error 4086
       ALTER TABLE `seq1` CHANGE `cache_size` cache_size int ;
       
       CREATE OR REPLACE TEMPORARY SEQUENCE seq1;
       SHOW TABLES;
       

       
      230704 13:24:47 [ERROR] mysqld got signal 11 ;
       
      Server version: 11.2.0-MariaDB-debug-log source revision: 7c7de020b576a42bd381a9060c3076f85da0d9d4
       
      sigaction.c:0(__restore_rt)[0x7f954e653420]
      sql/sql_show.cc:5315(get_all_tables(THD*, TABLE_LIST*, Item*))[0x561438970199]
      sql/sql_show.cc:9129(get_schema_tables_result(JOIN*, enum_schema_table_state))[0x5614389a6f4b]
      sql/sql_select.cc:4889(JOIN::exec_inner())[0x56143885f94d]
      sql/sql_select.cc:4710(JOIN::exec())[0x56143885d5e4]
      sql/sql_select.cc:5239(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x561438861d35]
      sql/sql_select.cc:627(handle_select(THD*, LEX*, select_result*, unsigned long long))[0x5614388314a9]
      sql/sql_parse.cc:6030(execute_sqlcom_select(THD*, TABLE_LIST*))[0x5614387529ca]
      sql/sql_parse.cc:3944(mysql_execute_command(THD*, bool))[0x5614387435de]
      sql/sql_parse.cc:7769(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x56143875d80f]
      sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x561438735cef]
      sql/sql_parse.cc:1405(do_command(THD*, bool))[0x561438732a39]
      sql/sql_connect.cc:1416(do_handle_one_connection(CONNECT*, bool))[0x561438c0dd17]
      sql/sql_connect.cc:1320(handle_one_connection)[0x561438c0d674]
      perfschema/pfs.cc:2203(pfs_spawn_thread)[0x56143988aa46]
      nptl/pthread_create.c:478(start_thread)[0x7f954e647609]
       
      Query (0x6290001092a8): SHOW TABLES
      

      CREATE TEMPORARY SEQUENCE seq1 ;
       --error 4086
       ALTER TABLE `seq1` CHANGE `cache_size` cache_size int ;
       
       CREATE OR REPLACE TEMPORARY SEQUENCE seq1;
       SELECT table_schema, table_name FROM  INFORMATION_SCHEMA.TABLES WHERE table_type='temporary';
       

      230704 13:23:08 [ERROR] mysqld got signal 11 ;
       
      Server version: 11.2.0-MariaDB-debug source revision: 8a0eabc65d2ae06fd66542160ae3bbc7b475371c
       
      sql/signal_handler.cc:241(handle_fatal_signal)[0x55f0a1dbd6c6]
      sigaction.c:0(__restore_rt)[0x7f368be58420]
      sql/sql_show.cc:5914(process_i_s_table_temporary_tables(THD*, TABLE*, TABLE*))[0x55f0a169b5df]
      sql/sql_show.cc:5330(get_all_tables(THD*, TABLE_LIST*, Item*))[0x55f0a1693a44]
      sql/sql_show.cc:9129(get_schema_tables_result(JOIN*, enum_schema_table_state))[0x55f0a16ca02b]
      sql/sql_select.cc:4889(JOIN::exec_inner())[0x55f0a1582a2d]
      sql/sql_select.cc:4710(JOIN::exec())[0x55f0a15806c4]
      sql/sql_select.cc:5239(mysql_select(THD*, TABLE_LIST*, List<Item>&, Item*, unsigned int, st_order*, st_order*, Item*, st_order*, unsigned long long, select_result*, st_select_lex_unit*, st_select_lex*))[0x55f0a1584e15]
      sql/sql_select.cc:627(handle_select(THD*, LEX*, select_result*, unsigned long long))[0x55f0a1554589]
      sql/sql_parse.cc:6030(execute_sqlcom_select(THD*, TABLE_LIST*))[0x55f0a1475aaa]
      sql/sql_parse.cc:3944(mysql_execute_command(THD*, bool))[0x55f0a14666be]
      sql/sql_parse.cc:7769(mysql_parse(THD*, char*, unsigned int, Parser_state*))[0x55f0a14808ef]
      sql/sql_parse.cc:1894(dispatch_command(enum_server_command, THD*, char*, unsigned int, bool))[0x55f0a1458dcf]
      sql/sql_parse.cc:1405(do_command(THD*, bool))[0x55f0a1455b19]
      sql/sql_connect.cc:1416(do_handle_one_connection(CONNECT*, bool))[0x55f0a1930df7]
      sql/sql_connect.cc:1320(handle_one_connection)[0x55f0a1930754]
      perfschema/pfs.cc:2203(pfs_spawn_thread)[0x55f0a25afec4]
      nptl/pthread_create.c:478(start_thread)[0x7f368be4c609]
       
      Query (0x6290000e62a8): SELECT table_schema, table_name FROM  INFORMATION_SCHEMA.TABLES WHERE table_type='temporary'
      

      Attachments

        Issue Links

          Activity

            People

              anel Anel Husakovic
              alice Alice Sherepa
              Votes:
              0 Vote for this issue
              Watchers:
              4 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 2d 50m
                  2d 50m

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.