MDEV-31618: Server crashes in process_i_s_table_temporary_tables/get_all_tables